# cactus

./: README.md
android/: CMakeLists.txt  build.sh  run_benchmark.sh
apple/: CmakeLists.txt
cactus/: CMakeLists.txt
cactus/engine/: engine_model.cpp
cactus/ffi/: cactus_complete.cpp  cactus_embed.cpp  cactus_ffi.h  cactus_init.cpp  cactus_transcribe.cpp  cactus_utils.h
cactus/kernel/: kernel_nn.cpp  kernel_utils.h
cli/: bench.cpp
tests/: CMakeLists.txt  test_engine.cpp  test_kv_cache.cpp  test_utils.cpp  test_utils.h
tools/: convert_and_upload.sh  convert_hf.py
